services/tts/staging/03-ingress-routes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: tts-staging-strip-api-prefix
  namespace: tts-staging
spec:
  stripPrefix:
    prefixes:
    - /api
    forceSlash: false
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tts-staging-ingress-route
  namespace: tts-staging
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tts-staging.niaefeup.pt`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: tts-staging-backend-service
          port: 80
      middlewares:
        - name: tts-staging-strip-api-prefix
    - match: Host(`tts-staging.niaefeup.pt`)
      kind: Rule
      services:
        - name: tts-staging-frontend-service
          port: 80
  tls:
    secretName: tts-staging-certificate-secret
